// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Installations should render component when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Installations
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap-full"
            >
              <div
                class="el-input-wrap-full"
              >
                <div
                  class="el-mb5 el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Search Apps
                  </label>
                </div>
                <div
                  class="el-multi-select-input-wrapper"
                >
                  <input
                    class="el-multi-select-input"
                    id="app-ids-select"
                    name="appIds"
                  />
                  <div
                    class="el-mb5 el-multi-select-selected"
                  >
                    <span
                      class="el-ml2 el-icon-size-medium el-icon"
                    >
                      <svg />
                    </span>
                    <p>
                      No apps selected
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Company
              </label>
              <div
                class="el-searchable-dropdown-container"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </span>
                <input
                  class="el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Client
              </label>
              <div
                class="el-searchable-dropdown-container"
              >
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </span>
                <input
                  class="el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Installed Date From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Installed Date To
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11"
        >
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-intent-primary el-button"
                type="button"
              >
                Download CSV
                <div
                  class="el-button-loader"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Installations
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap-full"
          >
            <div
              class="el-input-wrap-full"
            >
              <div
                class="el-mb5 el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  placeholder="Search"
                />
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Search Apps
                </label>
              </div>
              <div
                class="el-multi-select-input-wrapper"
              >
                <input
                  class="el-multi-select-input"
                  id="app-ids-select"
                  name="appIds"
                />
                <div
                  class="el-mb5 el-multi-select-selected"
                >
                  <span
                    class="el-ml2 el-icon-size-medium el-icon"
                  >
                    <svg />
                  </span>
                  <p>
                    No apps selected
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Company
            </label>
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Client
            </label>
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Installed Date From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Installed Date To
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11"
      >
        <div
          class="el-button-group"
        >
          <div
            class="el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
              type="button"
            >
              Download CSV
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Installations should render component with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          Installations
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap-full"
            >
              <div
                class="el-input-wrap-full"
              >
                <div
                  class="el-mb5 el-input-group"
                >
                  <input
                    class="el-input"
                    id="test-static-id"
                    placeholder="Search"
                  />
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                  <label
                    class="el-label"
                    for="test-static-id"
                  >
                    Search Apps
                  </label>
                </div>
                <div
                  class="el-multi-select-input-wrapper"
                >
                  <input
                    class="el-multi-select-input"
                    id="app-ids-select"
                    name="appIds"
                  />
                  <div
                    class="el-mb5 el-multi-select-selected"
                  >
                    <span
                      class="el-ml2 el-icon-size-medium el-icon"
                    >
                      <svg />
                    </span>
                    <p>
                      No apps selected
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Company
              </label>
              <div
                class="el-searchable-dropdown-container"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </span>
                <input
                  class="el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="companyName"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <label
                class="el-label"
              >
                Client
              </label>
              <div
                class="el-searchable-dropdown-container"
              >
                <input
                  id="client-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-icon"
                  >
                    <svg />
                  </span>
                </span>
                <input
                  class="el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="clientId"
                  placeholder="Search customers"
                  value=""
                />
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="installedDateFrom"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Installed Date From
                </label>
              </div>
            </div>
            <div
              class="el-input-wrap"
            >
              <div
                class="el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  name="installedDateTo"
                  type="date"
                />
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Installed Date To
                </label>
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11"
        >
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-intent-primary el-button"
                type="button"
              >
                Download CSV
                <div
                  class="el-button-loader"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="false"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Customer Name
            </div>
            <div
              class="el-table-header"
            >
              App Name
            </div>
            <div
              class="el-table-header"
            >
              Reapit Customer Code
            </div>
            <div
              class="el-table-header"
            >
              Customer Address
            </div>
            <div
              class="el-table-header"
            >
              Date Installed
            </div>
            <div
              class="el-table-header"
            >
              Installed By
            </div>
            <div
              class="el-table-header"
            >
              Date Uninstalled
            </div>
            <div
              class="el-table-header"
            >
              Uninstalled By
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Name"
                >
                  Sandbox Estates
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="App Name"
                >
                  App Test Name
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Reapit Customer Code"
                >
                  SBOX
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Customer Address"
                >
                  67-74 Third Floor Saffron Hill London EC1N 8QX
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Date Installed"
                >
                  23-03-2022
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Installed By"
                >
                  test@example.com
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Date Uninstalled"
                >
                  -
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Uninstalled By"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            1
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        Installations
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap-full"
          >
            <div
              class="el-input-wrap-full"
            >
              <div
                class="el-mb5 el-input-group"
              >
                <input
                  class="el-input"
                  id="test-static-id"
                  placeholder="Search"
                />
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
                <label
                  class="el-label"
                  for="test-static-id"
                >
                  Search Apps
                </label>
              </div>
              <div
                class="el-multi-select-input-wrapper"
              >
                <input
                  class="el-multi-select-input"
                  id="app-ids-select"
                  name="appIds"
                />
                <div
                  class="el-mb5 el-multi-select-selected"
                >
                  <span
                    class="el-ml2 el-icon-size-medium el-icon"
                  >
                    <svg />
                  </span>
                  <p>
                    No apps selected
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Company
            </label>
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="companyName"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <label
              class="el-label"
            >
              Client
            </label>
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="client-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg />
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="clientId"
                placeholder="Search customers"
                value=""
              />
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="installedDateFrom"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Installed Date From
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="installedDateTo"
                type="date"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Installed Date To
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11"
      >
        <div
          class="el-button-group"
        >
          <div
            class="el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
              type="button"
            >
              Download CSV
              <div
                class="el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="false"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Customer Name
          </div>
          <div
            class="el-table-header"
          >
            App Name
          </div>
          <div
            class="el-table-header"
          >
            Reapit Customer Code
          </div>
          <div
            class="el-table-header"
          >
            Customer Address
          </div>
          <div
            class="el-table-header"
          >
            Date Installed
          </div>
          <div
            class="el-table-header"
          >
            Installed By
          </div>
          <div
            class="el-table-header"
          >
            Date Uninstalled
          </div>
          <div
            class="el-table-header"
          >
            Uninstalled By
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Name"
              >
                Sandbox Estates
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="App Name"
              >
                App Test Name
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Reapit Customer Code"
              >
                SBOX
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Address"
              >
                67-74 Third Floor Saffron Hill London EC1N 8QX
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Installed By"
              >
                test@example.com
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Uninstalled"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Uninstalled By"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
